res/examples/valid/if_expression_as_list_expr_value.eg
[if (true) { 123 } else { 456 }, if (false) { 123 } else { 456 }];