res/examples/invalid/if_expression_with_expr_then.eg
if (true) false;

// out: SyntaxError: unexpected "false"; expected: ["\"{\"", "\"-\"", "\"+\"", "\"/\"", "\"%\"", "\"*\"", "\"!=\"", "\"==\"", "\">\"", "\">=\"", "\"<\"", "\"<=\"", "\"and\"", "\"or\""]